force-app/main/default/objects/SVMXC__Service_Template__c/SVMXC__Service_Template__c.object-meta.xml
<CustomObject>
    <description>Warranty Template allows organizations to define and standardize their warranty offering and apply it for a range of products automatically. A warranty template can be used to define the type and scope of coverage in a warranty such as parts, labor and expenses, and can then be associated with one or more products. When installed product records are created in ServiceMax, warranty will be calculated automatically based on the pre-defined warranty template associated with the product.</description>
    <label>Warranty Terms</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warranty Terms</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>