force-app/main/default/objects/SVMXC__Service_Template__c/fields/SVMXC__Material_Covered__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Material_Covered__c</fullName>
    <description>A number between 1 and 100 indicating the percentage of coverage on parts</description>
    <inlineHelpText>A number between 1 and 100 indicating the percentage of coverage on parts</inlineHelpText>
    <label>Material % Covered</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>