force-app/main/default/objects/SVMXC__Service_Template__c/fields/SVMXC__Onsite_Repair__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Onsite_Repair__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if customer is eligible for onsite repair when entitled by this warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
    <inlineHelpText>Flag indicates if customer is eligible for onsite repair when entitled by this warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
    <label>Onsite Repair</label>
    <type>Checkbox</type>
</CustomField>