force-app/main/default/objects/SVMXC__Service_Template__c/validationRules/SVMXC__Expenses_Duration_UoT_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC__Expenses_Duration_UoT_Check</fullName>
    <active>false</active>
    <description>If Expenses coverage % is specified, duration and unit of time should be specified too.</description>
    <errorConditionFormula>AND(NOT ISNULL( SVMXC__Expenses_Covered__c ), OR( ISNULL(  SVMXC__Duration_of_Expenses__c ), ISPICKVAL(  SVMXC__Unit_of_Time_Expenses__c , &quot;&quot;)))</errorConditionFormula>
    <errorDisplayField>SVMXC__Unit_of_Time_Expenses__c</errorDisplayField>
    <errorMessage>Please specify the duration and unit of time of Expenses coverage.</errorMessage>
</ValidationRule>