force-app/main/default/objects/SVMXC__Service_Template__c/validationRules/SVMXC__Labor_Duration_UoT_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC__Labor_Duration_UoT_Check</fullName>
    <active>false</active>
    <description>If Labor coverage % is specified, duration and unit of time should be specified too.</description>
    <errorConditionFormula>AND(NOT ISNULL( SVMXC__Time_Covered__c ), OR( ISNULL(  SVMXC__Duration_of_Time_Coverage__c ), ISPICKVAL(  SVMXC__Unit_of_Time__c, &quot;&quot;)))</errorConditionFormula>
    <errorDisplayField>SVMXC__Unit_of_Time__c</errorDisplayField>
    <errorMessage>Please specify the duration and unit of time of Labor coverage.</errorMessage>
</ValidationRule>