force-app/main/default/objects/SVMXC__Service_Template__c/validationRules/SVMXC__Material_Duration_UoT_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC__Material_Duration_UoT_Check</fullName>
    <active>false</active>
    <description>If Material coverage % is specified, duration and unit of time should be specified too.</description>
    <errorConditionFormula>AND(NOT ISNULL(SVMXC__Material_Covered__c), OR( ISNULL( SVMXC__Duration_of_Material_Coverage__c ), ISPICKVAL( SVMXC__Unit_of_Time_Material__c, &quot;&quot;)))</errorConditionFormula>
    <errorDisplayField>SVMXC__Unit_of_Time_Material__c</errorDisplayField>
    <errorMessage>Please specify the duration and unit of time of Material coverage.</errorMessage>
</ValidationRule>