force-app/main/default/objects/SVMXC__Service_Template__c/listViews/SVMXC__All_Warranty_Terms.listView-meta.xml
<ListView>
    <fullName>SVMXC__All_Warranty_Terms</fullName>
    <columns>NAME</columns>
    <columns>SVMXC__Coverage_Effective_From2__c</columns>
    <columns>SVMXC__Material_Covered__c</columns>
    <columns>SVMXC__Time_Covered__c</columns>
    <columns>SVMXC__Expenses_Covered__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Warranty Terms</label>
    <language>en_US</language>
</ListView>